kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acme-portal-static
  labels:
    name: acme-portal-static
    app: acme-portal-static
