kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-portal-static-service
  namespace: acme-portal-static
  labels:
    app: acme-portal-static
    app.kubernetes.io/name: acme-portal-static
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: acme-portal-static
